Add model crate

--- a/anthem-engine-model/Cargo.toml
+++ b/anthem-engine-model/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "anthem-engine"
+name = "anthem-engine-model"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anthem-engine-model = { path = "./anthem-engine-model" }
+serde = { version = "1.0.130", features = ["derive"] }
