--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "anthem-engine"
+name = "anthem_engine"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anthem-engine-model = { path = "./anthem-engine-model" }
+anthem_engine_model = { path = "./anthem_engine_model" }
