--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,5 @@ edition = "2021"
 
 [dependencies]
 anthem_engine_model = { path = "./anthem_engine_model" }
+log = "0.4.14"
+log4rs = { version = "1.0.0" }
